Port to java 8